--- a/app/src/main/res/layout/event_creation_dialog_form.xml
+++ b/app/src/main/res/layout/event_creation_dialog_form.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:hint="Event Type"
+        android:hint="Event Name"
         android:textColorHint="#111111">
 
         <EditText
