--- a/app/src/main/res/layout/event_recycler_item.xml
+++ b/app/src/main/res/layout/event_recycler_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/event_item_cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
@@ -9,109 +10,146 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp">
+            android:layout_margin="2dp">
 
             <TextView
                 android:id="@+id/eventNameTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="2dp"
                 android:text="Event Name"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
+            <View
+                android:id="@+id/divider1"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_below="@+id/eventNameTV"
+                android:layout_margin="2dp"
+                android:background="@android:color/darker_gray" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_margin="10dp"
-                android:gravity="center">
+                android:layout_below="@+id/divider1"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="2dp"
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/eventTypeTV"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:text="Event Type"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/creationDateTV"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/eventTypeTV"
                     android:layout_gravity="end|right"
                     android:layout_margin="2dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:text="yy/mm/dd"
-                    android:textSize="13sp" />
-            </RelativeLayout>
+                    android:textSize="15sp" />
+            </LinearLayout>
         </RelativeLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center">
-
-            <TextView
-                android:id="@+id/numParticipantsTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="# Number of Participants"
-                android:textSize="15sp"
-                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/numInstancesTV"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/numParticipantsTV"
-                android:layout_margin="5dp"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:text="# Number of instances"
                 android:textSize="15sp"
                 android:textStyle="bold" />
-        </RelativeLayout>
 
-        <RelativeLayout
+            <TextView
+                android:id="@+id/numParticipantsTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="# Number of Participants"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:gravity="center">
+            android:layout_margin="2dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/statisticsImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="2dp"
+                android:layout_weight="1"
                 android:src="@drawable/ic_chart_scatterplot_hexbin_grey600_36dp" />
 
             <ImageView
                 android:id="@+id/editImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="2dp"
                 android:layout_toEndOf="@+id/statisticsImageView"
                 android:layout_toRightOf="@+id/statisticsImageView"
+                android:layout_weight="1"
                 android:src="@drawable/ic_pencil_grey600_36dp" />
 
             <ImageView
                 android:id="@+id/deleteImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="2dp"
                 android:layout_toEndOf="@+id/editImageView"
                 android:layout_toRightOf="@+id/editImageView"
+                android:layout_weight="1"
                 android:src="@drawable/ic_delete_grey600_36dp" />
 
-        </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
